Fixe gap in button filter3

--- a/src/app/components/header.component/header.component.scss
+++ b/src/app/components/header.component/header.component.scss
@@ -19,6 +19,7 @@ a:visited {
 .category-dropdown {
   position: relative;
   display: inline-block;
+  margin: 1rem 1rem;
   margin-left: 0.3rem;
 
 
